# bank_ledger

./: .gitignore  README.md
backendcode/: CMakeLists.txt  main.cpp
backendcode/include/: bank_ledger.h  linked_list.h  stack.h  transaction.h
backendcode/src/: bank_ledger.cpp  ffi_bridge.cpp  linked_list.cpp  stack.cpp  transaction.cpp
dsa_sem_project/: README.md  pubspec.yaml
dsa_sem_project/android/app/: build.gradle.kts
dsa_sem_project/android/app/src/main/: AndroidManifest.xml
dsa_sem_project/android/app/src/main/kotlin/com/example/dsa_sem_project/: MainActivity.kt
dsa_sem_project/ios/Runner/: Info.plist
dsa_sem_project/ios/Runner.xcodeproj/: project.pbxproj
dsa_sem_project/lib/: main.dart
dsa_sem_project/lib/models/: transaction_model.dart
dsa_sem_project/lib/providers/: bank_provider.dart
dsa_sem_project/lib/screens/: dashboard_screen.dart  history_screen.dart  login_screen.dart
dsa_sem_project/lib/src/: bank_ledger_ffi.dart
dsa_sem_project/test/: widget_test.dart
dsa_sem_project/web/: index.html  manifest.json
dsa_sem_project/windows/: CMakeLists.txt
dsa_sem_project/windows/runner/: Runner.rc  main.cpp
